# raytracer

./: .gitignore  Cargo.toml
scenes/: book1_cover.toml  book2_cover.toml  cornell_box.toml  cornell_smoke.toml  globe.toml  perlin_demo.toml  quads.toml  sphere_light.toml  two_checker_spheres.toml
src/: aabb.rs  bvh.rs  camera.rs  constant_medium.rs  cuboid.rs  entity.rs  instance.rs  interval.rs  main.rs  mat3.rs  material.rs  objects.rs  perlin.rs  quad.rs  ray.rs  scene.rs  sphere.rs  texture.rs  vec3.rs
