[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = "2.1.1"
fastrand-contrib = "0.1.0"
image = "0.25.2"
rayon = "1.10.0"
serde = { version = "1.0.209", features = ["derive"] }
toml = "0.8.19"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
