[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = "2.1.1"
fastrand-contrib = "0.1.0"
image = "0.25.2"
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
serde = { version = "1.0.209", features = ["derive"] }
toml = "0.8.19"

[profile.release]
debug = true

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
debug = false
